--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <title>Sir Tim Berners-Lee</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
 
 </head>
 
 <body>
-
+<vl>
+    </vl>
     <ul class="menu">
         <li class="links">Home</li>
         <li class="links">My Videos</li>
@@ -23,7 +25,8 @@
     <section id="welcome">
         <div class="parallax-inner">
             <img src="stbl.jpg" class="profile" />
-            <h1>I Am <div id="name">Tim Berners-Lee</div></h1>
+            <h1>I Am <div id="name">Tim Berners-Lee</div>
+            </h1>
             <h2> I am the founder of www: World Wide Web</h2>
         </div>
 
@@ -45,4 +48,6 @@
             The Web was first used for e-commerce in 1997.</p>
     </section>
 
-</body></html>
+</body>
+
+</html>
